--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 </head>
 <body>
     
-    <div>Home</div>
+    <!-- <div>Home</div> -->
 
     <h1>Hello, User</h1>
 
     <ul>
-        <a class="link_list" href=""><li class="tutor_list" >About me</li></a>
-        <a class="link_list" href=""><li>Tutoring</li></a>
+        <a class="link_list" href=""><li class="about_me">About me</li></a>
+        <a class="link_list" href=""><li class="tutor_list">Tutoring</li></a>
     </ul>
 
     <p class="copywrite">Copywrite policy enstated by techboxco@060-320-7626</p>
